fix: prevent select focus flicker
prevent select--small from flickering when focused due to inline-flex vertical-align being baseline.

--- a/src/styles/utilities/_controls.scss
+++ b/src/styles/utilities/_controls.scss
@@ -25,6 +25,7 @@ $control-padding-horizontal: calc(0.75em - #{$control-border-width});
   outline: none;
   padding: $control-padding-vertical $control-padding-horizontal;
   position: relative;
+  vertical-align: middle;
 }
 
 @mixin control--small {
